disable GC logging